added general GET api requests
